<resources>
    <string name="app_name">Notes app</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="note_title">Note title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type Note Here...</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">Add Image</string>
    <string name="add_link">Add Link</string>
    <string name="type_a_link">Type a link</string>
    <string name="add_action">Add</string>
    <string name="cancel_action">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note</string>
    <string name="no_notes_created">No Notes created</string>
    <string name="guideFirstNote">Tap the<b> + </b>button below to<br></br> create a new note.</string>
    <string name="share">Share</string>
</resources>