<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_linkDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/imageAddUrl"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_margin="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:importantForAutofill="no"
        android:src="@drawable/ic_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorWhite" />

    <TextView
        android:id="@+id/text_addLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:layout_marginBottom="@dimen/_8sdp"
        android:includeFontPadding="false"
        android:text="@string/add_link"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="@id/imageAddUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageAddUrl"
        app:layout_constraintTop_toTopOf="@id/imageAddUrl" />

    <EditText
        android:id="@+id/input_linkAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_regular"
        android:hint="@string/type_a_link"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:textColorHint="@color/colorTextHint"
        android:textColor="@color/colorWhite"
        android:background="@null"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintTop_toBottomOf="@id/imageAddUrl"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:imeOptions="actionDone"
        android:gravity="center_vertical" />

    <TextView
        android:id="@+id/text_addAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/add_action"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13sdp"
        android:padding="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_linkAddress" />

    <TextView
        android:id="@+id/text_cancelAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:padding="@dimen/_8sdp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/cancel_action"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toBottomOf="@id/text_addAction"
        app:layout_constraintEnd_toStartOf="@id/text_addAction"
        app:layout_constraintTop_toTopOf="@id/text_addAction" />

</androidx.constraintlayout.widget.ConstraintLayout>